Fix missing menu icon on mobile
Fixes #886

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -43,7 +43,7 @@
 }
 
 body {
-  svg {
+  >svg {
     &:nth-of-type(1) {
       display: none;
     }
